--- a/about.html
+++ b/about.html
@@ -11,7 +11,15 @@
         <h1>About Us</h1>
     </header>
     <nav>
-        <!-- (Include the same navigation as in the landing page) -->
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="announcements.html">Announcements</a></li>
+            <li><a href="signin.html">Sign In</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
+            
+        </ul>
     </nav>
     <div class="container">
         <h2>Our Story</h2>
@@ -21,6 +29,5 @@
         <h2>Contact Us</h2>
         <p>Email: info@example.com<br>Phone: (123) 456-7890</p>
     </div>
-    <!-- <script src="auth.js"></script> -->
 </body>
 </html>
