--- a/dashboard.html
+++ b/dashboard.html
@@ -11,20 +11,20 @@
         <h1>Dashboard</h1>
     </header>
     <nav>
-        <!-- (Include the same navigation as in the landing page) -->
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="announcements.html">Announcements</a></li>
+            <li><a href="signin.html">Sign In</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
+            
+        </ul>
     </nav>
     <div class="container">
-        <h2>Welcome to Your Dashboard</h2>
-        <div class="dashboard-item">
-            <h3>Recent Activity</h3>
-            <p>You have no recent activity.</p>
-        </div>
-        <div class="dashboard-item">
-            <h3>Announcements</h3>
-            <p>Check out our latest announcements <a href="announcements.html">here</a>.</p>
-        </div>
+        <h2>Sign In to View Dashboard</h2>
+        <p><a href="signin.html">Sign In to Your Account</a></p>
+        <p>or <a href="signup.html">Create an account</a></p>
     </div>
-    <button onclick="signOut()">Sign Out</button>
-    <!-- <script src="auth.js"></script> -->
 </body>
 </html>
