--- a/dashboard_in.html
+++ b/dashboard_in.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Announcements</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Announcements</h1>
+        <h1>Dashboard</h1>
     </header>
     <nav>
         <ul>
@@ -22,17 +22,17 @@
         </ul>
     </nav>
     <div class="container">
-        <h2>Latest Announcements</h2>
-        <div class="announcement">
-            <h3>Website Launch</h3>
-            <p>We're excited to announce the launch of our new website!</p>
-            <small>Posted on: September 7, 2024</small>
+        <h2>Welcome to Your Dashboard</h2>
+        <div class="dashboard-item">
+            <h3>Recent Activity</h3>
+            <p>You have no recent activity.</p>
         </div>
-        <div class="announcement">
-            <h3>Upcoming Maintenance</h3>
-            <p>We will be performing routine maintenance on September 10, 2024. The website may be unavailable for a few hours.</p>
-            <small>Posted on: September 6, 2024</small>
+        <div class="dashboard-item">
+            <h3>Announcements</h3>
+            <p>Check out our latest announcements <a href="announcements.html">here</a>.</p>
         </div>
     </div>
+    <button onclick="signOut()">Sign Out</button>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
