--- a/signin.html
+++ b/signin.html
@@ -11,16 +11,37 @@
         <h1>Sign In</h1>
     </header>
     <nav>
-        <!-- (Include the same navigation as in the landing page) -->
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="announcements.html">Announcements</a></li>
+            <li><a href="signin.html">Sign In</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
+            
+        </ul>
     </nav>
     <div class="container">
         <h2>Login to Your Account</h2>
+        <p>or <a href="signup.html">create an account</a></p>
         <form onsubmit="signIn(event)">
-            <input type="text" name="username" placeholder="Username or Email" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <input type="submit" value="Sign In">
+            <input id="email" type="text" name="username" placeholder="Username or Email" required>
+            <input id="password" type="password" name="password" placeholder="Password" required>
+            <div class="remember-me">
+                <input type="checkbox" id="remember-me">
+                <label for="remember-me">Remember me</label>
+            </div>
+            <input id="submit-button" type="submit" value="Sign In">
         </form>
+        <button id = "google-login-btn" class="google-signin">
+            <img src="google-icon.png" alt="Google Icon">
+            Sign in with Google
+        </button>
+        <a href="#" class="forgot-password">Forgotten your password?</a>
     </div>
-    <!-- <script src="auth.js"></script> -->
+    <div id="error-message" style="color:red;"></div>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
+
+
