--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script scr= "script.js" defer type= "module"></script>
     <title>SEHPAATHI</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,16 +15,16 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="announcements.html">Announcements</a></li>
             <li><a href="signin.html">Sign In</a></li>
             <li><a href="signup.html">Sign Up</a></li>
-            <li><a href="dashboard.html">Dashboard</a></li>
+            
         </ul>
     </nav>
     <div class="container">
         <h2>Welcome to our landing page!</h2>
         <p>This is a basic website template. Feel free to explore our pages and sign up for an account.</p>
     </div>
-    <!-- <script src="auth.js"></script> -->
 </body>
 </html>
