--- a/signup.html
+++ b/signup.html
@@ -11,18 +11,28 @@
         <h1>Sign Up</h1>
     </header>
     <nav>
-        <!-- (Include the same navigation as in the landing page) -->
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="announcements.html">Announcements</a></li>
+            <li><a href="signin.html">Sign In</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
+            
+        </ul>
     </nav>
     <div class="container">
         <h2>Create an Account</h2>
+        <p>Already have an account? <a href="signin.html">Sign In</a></p>
         <form onsubmit="signUp(event)">
             <input type="text" name="username" placeholder="Username" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="password" placeholder="Password" required>
+            <input id="email" type="email" name="email" placeholder="Email" required>
+            <input id="password" type="password" name="password" placeholder="Password" required>
             <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-            <input type="submit" value="Sign Up">
+            <input id="submit-button" type="submit" value="Sign Up">
         </form>
     </div>
-    <!-- <script src="auth.js"></script> -->
+    <div id="error-message" style="color:red;"></div>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
