--- a/about.html
+++ b/about.html
@@ -5,29 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <header>
-        <h1>About Us</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="dashboard.html">Dashboard</a></li>
-            <li><a href="announcements.html">Announcements</a></li>
-            <li><a href="signin.html">Sign In</a></li>
-            <li><a href="signup.html">Sign Up</a></li>
-            
-        </ul>
-    </nav>
-    <div class="container">
-        <h2>Our Story</h2>
-        <p>We are a company dedicated to providing excellent service to our customers. Founded in 2024, we strive to innovate and exceed expectations in everything we do.</p>
-        <h2>Our Mission</h2>
-        <p>Our mission is to create value for our customers through innovative solutions and exceptional service.</p>
-        <h2>Contact Us</h2>
-        <p>Email: info@example.com<br>Phone: (123) 456-7890</p>
+    <div id="main"></div>   
+    <div id="page">
+        <nav>
+            <img src="assests\logo.png" alt="Logo">
+            <div id="nav-part2">
+              <h4 id="round"><a href="index.html">Home</a></h4>
+              <h4 id="round"><a href="about.html">About</a></h4>
+              <h4 id="round"><a href="dashboard.html">Dashboard</a></h4>
+              <h4 id="round"><a href="announcements.html">Announcements</a></h4>
+              <h4 id="SignIn"><a href="signin.html">Sign In</a></h4>
+              <h4 id="SignUp"><a href="signup.html">Sign Up</a></h4>
+            </div>
+          </nav>
+        <div id="center">
+            <h2>Our Story</h2>
+            <p>We are a company dedicated to providing excellent service to our customers. Founded in 2024, we strive to innovate and exceed expectations in everything we do.</p><br>
+            <h2>Our Mission</h2>
+            <p>Our mission is to create value for our customers through innovative solutions and exceptional service.</p><br>
+            <h2>Contact Us</h2>
+            <p>Email: info@example.com<br>Phone: (123) 456-7890</p>
+        </div>
     </div>
 </body>
 </html>
