--- a/dashboard.html
+++ b/dashboard.html
@@ -5,26 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <header>
-        <h1>Dashboard</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="dashboard.html">Dashboard</a></li>
-            <li><a href="announcements.html">Announcements</a></li>
-            <li><a href="signin.html">Sign In</a></li>
-            <li><a href="signup.html">Sign Up</a></li>
-            
-        </ul>
-    </nav>
-    <div class="container">
-        <h2>Sign In to View Dashboard</h2>
-        <p><a href="signin.html">Sign In to Your Account</a></p>
-        <p>or <a href="signup.html">Create an account</a></p>
-    </div>
+    <div id="main"></div>
+    <div id="page">
+        <nav>
+            <img src="assests\logo.png" alt="Logo">
+            <div id="nav-part2">
+              <h4 id="round"><a href="index.html">Home</a></h4>
+              <h4 id="round"><a href="about.html">About</a></h4>
+              <h4 id="round"><a href="dashboard.html">Dashboard</a></h4>
+              <h4 id="round"><a href="announcements.html">Announcements</a></h4>
+              <h4 id="SignIn"><a href="signin.html">Sign In</a></h4>
+              <h4 id="SignUp"><a href="signup.html">Sign Up</a></h4>
+            </div>
+        </nav>
+        <div id="center">
+            <div class="container">
+                <h2>Sign In to View Dashboard</h2><br>
+                <p><a href="signin.html">Sign In to Your Account</a></p><br>
+                <p>or <a href="signup.html">Create an account</a></p>
+            </div>
+        </div>
 </body>
 </html>
