--- a/dashboard_in.html
+++ b/dashboard_in.html
@@ -5,33 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <header>
-        <h1>Dashboard</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="dashboard.html">Dashboard</a></li>
-            <li><a href="announcements.html">Announcements</a></li>
-            <li><a href="signin.html">Sign In</a></li>
-            <li><a href="signup.html">Sign Up</a></li>
-            
-        </ul>
-    </nav>
-    <div class="container">
-        <h2>Welcome to Your Dashboard</h2>
-        <div class="dashboard-item">
-            <h3>Recent Activity</h3>
-            <p>You have no recent activity.</p>
+    <div id="main"></div>
+    <div id="page">
+        <nav>
+            <img src="assests\logo.png" alt="Logo">
+            <div id="nav-part2">
+              <h4 id="round"><a href="index.html">Home</a></h4>
+              <h4 id="round"><a href="about.html">About</a></h4>
+              <h4 id="round"><a href="dashboard.html">Dashboard</a></h4>
+              <h4 id="round"><a href="announcements.html">Announcements</a></h4>
+              <h4 id="SignIn"><a href="signin.html">Sign In</a></h4>
+              <h4 id="SignUp"><a href="signup.html">Sign Up</a></h4>
+            </div>
+        </nav>
+        <div id="center">
+            <div class="container">
+                <h2>Welcome to Your Dashboard</h2>
+                <div class="dashboard-item">
+                    <h3>Recent Activity</h3>
+                    <p>You have no recent activity.</p>
+                </div>
+                <div class="dashboard-item">
+                    <h3>Announcements</h3>
+                    <p>Check out our latest announcements <a href="announcements.html">here</a>.</p>
+                </div>
+            </div>
         </div>
-        <div class="dashboard-item">
-            <h3>Announcements</h3>
-            <p>Check out our latest announcements <a href="announcements.html">here</a>.</p>
-        </div>
-    </div>
     <button onclick="signOut()">Sign Out</button>
     <script src="script.js" type="module"></script>
 </body>
