--- a/signup.html
+++ b/signup.html
@@ -5,34 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <header>
-        <h1>Sign Up</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="dashboard.html">Dashboard</a></li>
-            <li><a href="announcements.html">Announcements</a></li>
-            <li><a href="signin.html">Sign In</a></li>
-            <li><a href="signup.html">Sign Up</a></li>
-            
-        </ul>
-    </nav>
-    <div class="container">
-        <h2>Create an Account</h2>
-        <p>Already have an account? <a href="signin.html">Sign In</a></p>
-        <form onsubmit="signUp(event)">
-            <input type="text" name="username" placeholder="Username" required>
-            <input id="email" type="email" name="email" placeholder="Email" required>
-            <input id="password" type="password" name="password" placeholder="Password" required>
-            <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-            <input id="submit-button" type="submit" value="Sign Up">
-        </form>
-    </div>
-    <div id="error-message" style="color:red;"></div>
+    <div id="main"></div>
+    <div id="page">
+        <nav>
+            <img src="assests\logo.png" alt="Logo">
+            <div id="nav-part2">
+              <h4 id="round"><a href="index.html">Home</a></h4>
+              <h4 id="round"><a href="about.html">About</a></h4>
+              <h4 id="round"><a href="dashboard.html">Dashboard</a></h4>
+              <h4 id="round"><a href="announcements.html">Announcements</a></h4>
+              <h4 id="SignIn"><a href="signin.html">Sign In</a></h4>
+              <h4 id="SignUp"><a href="signup.html">Sign Up</a></h4>
+            </div>
+        </nav>
+        <div id="center">
+            <div class="container">
+                <h2>Create an Account</h2>
+                <p>Already have an account? <a href="signin.html">Sign In</a></p>
+                <form onsubmit="signUp(event)">
+                    <input type="text" name="username" placeholder="Username" required>
+                    <input id="email" type="email" name="email" placeholder="Email" required>
+                    <input id="password" type="password" name="password" placeholder="Password" required>
+                    <input type="password" name="confirm_password" placeholder="Confirm Password" required>
+                    <input id="submit-button" type="submit" value="Sign Up">
+                </form>
+            </div>
+        </div>
+        <div id="error-message" style="color:red;"></div>
+    
     <script src="script.js" type="module"></script>
 </body>
 </html>
