--- a/signin.html
+++ b/signin.html
@@ -44,6 +44,62 @@
         <div id="error-message" style="color:red;"></div>
     </div>
     <script src="script.js" type="module"></script>
+    <footer>
+        <div class="container footer_container">
+          <div class="footer_1">
+            <a href="index.html" class="footer_logo"><h4>SEHPAATHI</h4></a>
+            <p>
+              Welcome to our community! Here, education meets inspiration and
+              endless opportunities await.
+            </p>
+          </div>
+          <div class="footer_2">
+            <h4>Permalinks</h4>
+            <ul class="permalinks">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="dashboard.html">Dashboard</a></li>
+              <li><a href="announcements.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer_3">
+            <h4>Privacy</h4>
+            <ul class="privacy">
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Refund Policy</a></li>
+            </ul>
+          </div>
+          <div class="footer_4">
+            <h4>Contact Us</h4>
+            <div>
+              <p>+91 934 567 8910</p>
+              <!-- <p>tech.niko.coding@gmail.com</p> -->
+            </div>
+            <ul class="footer_socials">
+              <li>
+                <a href="#"
+                  ><i class="ri-facebook-fill" title="FaceBook"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="ri-instagram-line" title="Instagram"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#"><i class="ri-twitter-x-line" title="X"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="ri-github-fill" title="GitHub"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer_copyright">
+          <small>Copyright &copy; SEHPAATHI</small>
+        </div>
+    </footer>
 </body>
 </html>
 
